--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "frontend",
+  "name": "frontend ",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.11",
+    "tailwindcss": "^4.0.11",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.13.4",
+    "@eslint/js": "^9.20.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
-    "npm-run-all2": "^7.0.2",
-    "typescript": "~5.7.3",
+    "eslint": "^9.20.1",
+    "eslint-plugin-vue": "^9.32.0",
     "vite": "^6.1.0",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.2"
+    "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
